project('v4l2-examples', 'c',
  version : '0.1',
  default_options : ['warning_level=3'])

# Define the executable
executable('example-1',
  'example-1/example-1.c',
  install : false)

executable('example-2',
  'example-2/example-2.c',
  install : false)

executable('example-3',
  'example-3/example-3.c',
  install : false)

executable('example-4',
  'example-4/example-4.c',
  install : false)
